--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <h2 class="text-4xl font-bold mb-12 section-title font-playfair">Mempelai</h2>
                 <div class="flex flex-col md:flex-row items-center justify-center space-y-8 md:space-y-0 md:space-x-12">
                     <div class="flex flex-col items-center">
-                        <img src="file/ml.jpg" alt="Mempelai Pria Argha" class="w-48 h-48 rounded-full object-cover shadow-lg mb-4 border-4 border-primary-dark">
+                        <img src="https://placehold.co/200x200/4A2C2A/FFFFFF?text=Argha" alt="Mempelai Pria Argha" class="w-48 h-48 rounded-full object-cover shadow-lg mb-4 border-4 border-primary-dark">
                         <h3 class="text-2xl font-semibold font-playfair">Argha Aditya FN</h3>
                         <p class="font-inter">Putra dari Bapak Hari & Ibu Wahyuningsih</p>
                     </div>
                     <div class="text-5xl font-bold text-primary-red hidden md:block font-playfair">&amp;</div>
                     <div class="flex flex-col items-center">
-                        <img src="file/mp.jpg" alt="Mempelai Wanita Eva" class="w-48 h-48 rounded-full object-cover shadow-lg mb-4 border-4 border-primary-red">
+                        <img src="https://placehold.co/200x200/8B0000/FFFFFF?text=Eva" alt="Mempelai Wanita Eva" class="w-48 h-48 rounded-full object-cover shadow-lg mb-4 border-4 border-primary-red">
                         <h3 class="text-2xl font-semibold font-playfair">Eva Dwi Jayanti</h3>
                         <p class="font-inter">Putri dari Bapak Sumardi & Ibu Miatun </p>
                     </div>
@@ -148,9 +148,8 @@
         <section id="galeri" class="py-16 px-4 bg-transparent text-center animate-on-scroll text-white">
             <div class="max-w-4xl mx-auto">
                 <h2 class="text-4xl font-bold mb-12 section-title font-playfair">Our Memories</h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-                    <img src="file/me1.jpg" alt="Foto Pernikahan 1" class="w-full h-auto object-cover rounded-lg shadow-md">
-                    <img src="file/me4.jpg" alt="Foto Pernikahan 4" class="w-full h-auto object-cover rounded-lg shadow-md">
+                <div class="flex justify-center px-4">
+                    <img src="https://placehold.co/600x400/a0522d/FFFFFF?text=Our+Memory" alt="Foto Kenangan" class="w-full max-w-md h-auto object-cover rounded-lg shadow-md">
                 </div>
             </div>
         </section>
@@ -167,32 +166,11 @@
                 </button>
 
 
-                <div id="bank-info-container" class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8 hidden">
-                    <!-- Kartu Bank BRI -->
-                    <div class="atm-card">
-                        <div class="flex justify-between items-start">
-                            <img src="file/bri.png" alt="Logo Bank BRI" class="bank-logo-card">
-                            <div class="chip"></div>
-                        </div>
-                        <div class="card-number-group">
-                            <p class="card-number" id="bri-account-number">604601019084532</p>
-                            <button class="copy-btn" data-account-target="bri-account-number" aria-label="Salin nomor rekening BRI">
-                                <i class="fas fa-copy"></i>
-                            </button>
-                            <span class="copy-feedback" id="bri-copy-feedback"></span>
-                        </div>
-                        <div class="card-holder-info">
-                            <div>
-                                <p class="text-xs opacity-75">Nama Pemilik</p>
-                                <p>Eva Dwi Jayanti</p>
-                            </div>
-                        </div>
-                    </div>
-
+                <div id="bank-info-container" class="flex justify-center gap-8 mb-8 hidden">
                     <!-- Kartu Bank Mandiri -->
                     <div class="atm-card">
                         <div class="flex justify-between items-start">
-                            <img src="file/mandiri.png" alt="Logo Bank Mandiri" class="bank-logo-card">
+                            <img src="https://placehold.co/100x40/FFFFFF/000000?text=Mandiri" alt="Logo Bank Mandiri" class="bank-logo-card">
                             <div class="chip"></div>
                         </div>
                         <div class="card-number-group">
@@ -235,7 +213,7 @@
 
     <!-- Musik Latar -->
     <audio id="background-music" loop>
-        <source src="file/wedding.mp3" type="audio/mpeg" />
+        <source src="https://cdn.pixabay.com/audio/2022/02/14/audio_29c3233c3f.mp3" type="audio/mpeg" />
         Your browser does not support the audio element.
     </audio>
 
